# TP2022_ALGO_GRAPHS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: Graphs.yml
Graphs/: ArcGraph.h  CMakeLists.txt  IGraph.h  InternalEntities.h  ListGraph.h  MatrixGraph.h  SetGraph.h
Tests/: CMakeLists.txt  Tests_ArcGraph.h  Tests_GraphConstructors.h  Tests_ListGraph.h  Tests_MatrixGraph.h  Tests_SetGraph.h  help_for_tests.h  tests.cpp
scripts/linters/: CPPLINT.cfg  linters.sh
